<resources>
    <string name="app_name">Estudo sobre RoomPersistenceLib</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_insert_button">Inserir</string>
    <string name="label_select_users_button">Listar Usuários</string>
    <string name="hint_user_register">r028367</string>
    <string name="hint_user_name">Chris Lucas</string>
    <string name="save">Salvar</string>
    <string name="label_id_user">Id</string>
    <string name="user_register">Registro</string>
    <string name="default_user_register">r000000</string>
    <string name="default_user_id">0</string>
    <string name="default_label_user_name">Nome</string>
    <string name="default_username">Christoffer Lucas</string>
    <string name="default_label_type_user">Cargo</string>
    <string name="default_type_user">Técnico</string>

    <string-array name="type_user">
        <item>Técnico</item>
        <item>Supervisor</item>
    </string-array>
</resources>
