<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    card_view:contentPadding="10sp"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="8sp"
    android:layout_marginRight="8sp"
    android:layout_marginTop="10sp">

    <GridLayout
        android:columnCount="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnOrderPreserved="true"
        android:orientation="vertical"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/label_id_user"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/label_id_user"
            />

        <TextView
            android:id="@+id/user_id"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/default_user_id"
            />

        <TextView
            android:id="@+id/label_user_register"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/user_register"
            />

        <TextView
            android:id="@+id/user_register"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/default_user_register"
            />

        <TextView
            android:id="@+id/label_user_name"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/default_label_user_name"
            />

        <TextView
            android:id="@+id/user_name"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/default_username"
            />

        <TextView
            android:id="@+id/label_type_user"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/default_label_type_user"
            />


        <TextView
            android:id="@+id/type_user"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/default_type_user"
            />

    </GridLayout>

</android.support.v7.widget.CardView>