<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="arch.xplore.roompersistencelib.fragments.InsertUser">
    <GridLayout
        android:columnCount="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/hint_user_name"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_row="1">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_user_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:singleLine="true"
                android:maxLines="1"
                android:hint="@string/hint_user_register" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_type_user"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/type_user"
            />

        <Button
            android:id="@+id/button_save_user"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_columnSpan="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            />
    </GridLayout>
</FrameLayout>
